--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "abseil-cpp"]
-	path = abseil-cpp
+[submodule "libs/abseil-cpp"]
+	path = libs/abseil-cpp
 	url = https://github.com/abseil/abseil-cpp.git
