20250914 #1 Correctly remade the 'sped up' version of the move generation. Looking to make it faster or more slim...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(libs/abseil-cpp)
 
 set(my_includes_dir src/includes)
 set(my_impl_dir src/implementation)
+set(test_dir tests)
 
 add_executable(main 
 ${my_impl_dir}/main_noiaFattaBene.cpp
@@ -18,7 +19,10 @@ ${my_impl_dir}/globals.cpp
 ${my_impl_dir}/less/IDRankPairLess.cpp
 ${my_impl_dir}/less/RankLess.cpp
 ${my_impl_dir}/less/TeamSetLess.cpp
-${my_impl_dir}/hash/VisitedConfigSetHash.cpp)
+${my_impl_dir}/hash/VisitedConfigSetHash.cpp
+${my_impl_dir}/silly_strats/funcs.cpp
+${my_impl_dir}/to_strings.cpp
+${test_dir}/main_test.cpp)
 
 
 target_compile_definitions(main 
@@ -27,7 +31,16 @@ $<$<CONFIG:Debug>:MIO_DEBUG>
 $<$<CONFIG:Release>:MIO_RELEASE>
 )
 
-target_include_directories(main PRIVATE ${my_includes_dir} libs)
+if (MSVC)
+  add_link_options(
+    $<$<CONFIG:Debug>:/INCREMENTAL> 
+    $<$<NOT:$<CONFIG:Debug>>:/INCREMENTAL:NO>
+  )
+endif()
+
+set_target_properties(main PROPERTIES LINK_DEPENDS_NO_SHARED TRUE)
+
+target_include_directories(main PRIVATE ${my_includes_dir} libs ${test_dir})
 
 # Declare dependency on the absl::strings library
 target_link_libraries(main absl::flat_hash_set absl::hash absl::btree)
