20251017 #1 made a strategy that actually calculates the best possible strategy To do list:     - test the function correctness (the method should be already mathematically correct).     - clean the function from all the mess     - clean up the useless files and silly silly strats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cmake.debugConfig": {
-    "externalConsole": true
+    "console": "externalTerminal"
   },
   "files.associations": {
     "algorithm": "cpp",
