--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/abseil-cpp"]
 	path = libs/abseil-cpp
 	url = https://github.com/abseil/abseil-cpp.git
+[submodule "libs/gtest"]
+	path = libs/gtest
+	url = https://github.com/google/googletest.git
