--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,18 @@ project(my_project)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Enable testing for the project
+enable_testing()
 
 # Process Abseil's CMake build system
 add_subdirectory(libs/abseil-cpp)
 
+# Add Google Test
+add_subdirectory(libs/gtest)
+
+
 set(my_includes_dir src/includes)
 set(my_impl_dir src/implementation)
-set(test_dir tests)
 
 add_executable(main 
 ${my_impl_dir}/main_noiaFattaBene.cpp
@@ -20,8 +25,7 @@ ${my_impl_dir}/Config.cpp
 ${my_impl_dir}/TournamentConfig.cpp
 ${my_impl_dir}/TeamArray.cpp
 ${my_impl_dir}/strat.cpp
-${my_impl_dir}/to_strings.cpp
-${test_dir}/main_test.cpp)
+${my_impl_dir}/to_strings.cpp)
 
 
 target_compile_definitions(main 
@@ -32,16 +36,23 @@ $<$<CONFIG:Release>:MIO_RELEASE>
 )
 
 if (MSVC)
-  add_link_options(
-    $<$<CONFIG:Debug>:/INCREMENTAL> 
-    $<$<NOT:$<CONFIG:Debug>>:/INCREMENTAL:NO>
-  )
+add_link_options(
+  $<$<CONFIG:Debug>:/INCREMENTAL> 
+  $<$<NOT:$<CONFIG:Debug>>:/INCREMENTAL:NO>
+)
 endif()
 
 set_target_properties(main PROPERTIES LINK_DEPENDS_NO_SHARED TRUE)
 
-target_include_directories(main PRIVATE ${my_includes_dir} libs ${test_dir})
+target_include_directories(main 
+PRIVATE 
+${my_includes_dir}
+libs
+${test_dir})
 
 
 # Declare dependency on the absl::strings library
 target_link_libraries(main absl::flat_hash_set absl::hash absl::btree)
+
+# Add the tests directory
+add_subdirectory(tests)
