refactored the project to have the core functionalities as a static library and added small-gui as a dipendency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,28 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(my_project)
+project(my_project LANGUAGES C CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 # Enable testing for the project
 enable_testing()
 
-# Process Abseil's CMake build system
-add_subdirectory(libs/abseil-cpp)
-
 # Add Google Test
 add_subdirectory(libs/gtest)
 
+add_subdirectory(core-lib)
+add_subdirectory(libs/abseil-cpp)
 
-set(my_includes_dir src/includes)
+
+set(my_includes_dir src/include)
 set(my_impl_dir src/implementation)
 
+add_library(small-gui STATIC
+libs/small-gui/microui.c
+libs/small-gui/renderer.c)
+
 add_executable(main 
-${my_impl_dir}/main_noiaFattaBene.cpp
-${my_impl_dir}/matricesModule.cpp
-${my_impl_dir}/globals.cpp
-${my_impl_dir}/Config.cpp
-${my_impl_dir}/TournamentConfig.cpp
-${my_impl_dir}/TeamArray.cpp
-${my_impl_dir}/strat.cpp
-${my_impl_dir}/to_strings.cpp)
+${my_impl_dir}/main_noiaFattaBene.cpp)
 
 
 target_compile_definitions(main 
@@ -48,11 +45,12 @@ target_include_directories(main
 PRIVATE 
 ${my_includes_dir}
 libs
+core-lib/include
 ${test_dir})
 
 
 # Declare dependency on the absl::strings library
-target_link_libraries(main absl::flat_hash_set absl::hash absl::btree)
+target_link_libraries(main tournament-build-core-lib small-gui absl::flat_hash_set absl::hash absl::btree)
 
 # Add the tests directory
 add_subdirectory(tests)
