--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/gtest"]
 	path = libs/gtest
 	url = https://github.com/google/googletest.git
+[submodule "libs/small-gui"]
+	path = libs/small-gui
+	url = https://github.com/tekknolagi/full-beans.git
