Added in the output HTML tiny logos rapresenting the skill level and colored accordingly (colors based on a predefined gradient)

--- a/core-lib/CMakeLists.txt
+++ b/core-lib/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(${TB_CORELIB_TARGET_NAME} STATIC
 	implementation/strat.cpp
 	implementation/to_strings.cpp
 	implementation/TournamentBuilderAPI.cpp
+	implementation/Colors.cpp
 )
 
 
